@@ -2,6 +2,9 @@
 
 Changes with Apache 2.3.3
 
+  *) mod_auth_digest: Fix usage of shared memory and re-enable it.
+     PR 16057 [Dan Poirier]
+
   *) Preserve Port information over internal redirects
      PR 35999 [Jonas Ringh <jonas.ringh cixit.se>]
 
